// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert component > renders alert with title and description 1`] = `
<div>
  <div
    class="_alert_af20a0 _info_af20a0 "
    role="alert"
  >
    <div
      class="_icon_af20a0"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          clip-rule="evenodd"
          d="M11.5 21a8.5 8.5 0 1 1 0-17 8.5 8.5 0 0 1 0 17zM13 8.878c0-1.27-.499-1.896-1.496-1.878C10.501 7.03 10 7.68 10 8.95c0 .737.17 1.647.51 2.731l.318.98c.081.245.14.413.175.503.197.533.376.811.537.835.15.018.314-.248.493-.8.083-.257.161-.512.233-.763.071-.252.146-.503.224-.755.34-1.12.51-2.054.51-2.803zM11.5 18a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="_content_af20a0"
    >
      <div
        class="_title_af20a0"
      >
        Test Title
      </div>
      <div
        class="_description_af20a0"
      >
        Test Description
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert component > renders dismissible alert with close button 1`] = `
<div>
  <div
    class="_alert_af20a0 _info_af20a0 "
    role="alert"
  >
    <div
      class="_icon_af20a0"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          clip-rule="evenodd"
          d="M11.5 21a8.5 8.5 0 1 1 0-17 8.5 8.5 0 0 1 0 17zM13 8.878c0-1.27-.499-1.896-1.496-1.878C10.501 7.03 10 7.68 10 8.95c0 .737.17 1.647.51 2.731l.318.98c.081.245.14.413.175.503.197.533.376.811.537.835.15.018.314-.248.493-.8.083-.257.161-.512.233-.763.071-.252.146-.503.224-.755.34-1.12.51-2.054.51-2.803zM11.5 18a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="_content_af20a0"
    >
      <div
        class="_description_af20a0"
      >
        Dismissible alert
      </div>
    </div>
    <button
      aria-label="Dismiss alert"
      class="_dismissButton_af20a0"
      type="button"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.0908 2.20223C13.286 2.00704 13.6026 2.00699 13.7978 2.20223C13.993 2.39747 13.993 2.71402 13.7978 2.90926L8.70698 8.00008L13.7978 13.0909C13.9929 13.2862 13.993 13.6027 13.7978 13.7979C13.6026 13.9931 13.286 13.993 13.0908 13.7979L7.99995 8.70711L2.90913 13.7979C2.71389 13.9931 2.39735 13.9931 2.2021 13.7979C2.00687 13.6027 2.00692 13.2862 2.2021 13.0909L7.29292 8.00008L2.2021 2.90926C2.00685 2.714 2.00685 2.39749 2.2021 2.20223C2.39736 2.00697 2.71387 2.00697 2.90913 2.20223L7.99995 7.29305L13.0908 2.20223Z"
          fill="#2C2E32"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component > renders error variant correctly 1`] = `
<div>
  <div
    class="_alert_af20a0 _error_af20a0 "
    role="alert"
  >
    <div
      class="_icon_af20a0"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          clip-rule="evenodd"
          d="M11.5 21a8.5 8.5 0 1 1 0-17 8.5 8.5 0 0 1 0 17zM13 8.878c0-1.27-.499-1.896-1.496-1.878C10.501 7.03 10 7.68 10 8.95c0 .737.17 1.647.51 2.731l.318.98c.081.245.14.413.175.503.197.533.376.811.537.835.15.018.314-.248.493-.8.083-.257.161-.512.233-.763.071-.252.146-.503.224-.755.34-1.12.51-2.054.51-2.803zM11.5 18a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="_content_af20a0"
    >
      <div
        class="_title_af20a0"
      >
        Error
      </div>
      <div
        class="_description_af20a0"
      >
        Error message
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert component > renders info variant correctly 1`] = `
<div>
  <div
    class="_alert_af20a0 _info_af20a0 "
    role="alert"
  >
    <div
      class="_icon_af20a0"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          clip-rule="evenodd"
          d="M11.5 21a8.5 8.5 0 1 1 0-17 8.5 8.5 0 0 1 0 17zM13 8.878c0-1.27-.499-1.896-1.496-1.878C10.501 7.03 10 7.68 10 8.95c0 .737.17 1.647.51 2.731l.318.98c.081.245.14.413.175.503.197.533.376.811.537.835.15.018.314-.248.493-.8.083-.257.161-.512.233-.763.071-.252.146-.503.224-.755.34-1.12.51-2.054.51-2.803zM11.5 18a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="_content_af20a0"
    >
      <div
        class="_title_af20a0"
      >
        Info
      </div>
      <div
        class="_description_af20a0"
      >
        Info message
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert component > renders warning variant correctly 1`] = `
<div>
  <div
    class="_alert_af20a0 _warning_af20a0 "
    role="alert"
  >
    <div
      class="_icon_af20a0"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          clip-rule="evenodd"
          d="M11.5 21a8.5 8.5 0 1 1 0-17 8.5 8.5 0 0 1 0 17zM13 8.878c0-1.27-.499-1.896-1.496-1.878C10.501 7.03 10 7.68 10 8.95c0 .737.17 1.647.51 2.731l.318.98c.081.245.14.413.175.503.197.533.376.811.537.835.15.018.314-.248.493-.8.083-.257.161-.512.233-.763.071-.252.146-.503.224-.755.34-1.12.51-2.054.51-2.803zM11.5 18a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="_content_af20a0"
    >
      <div
        class="_title_af20a0"
      >
        Warning
      </div>
      <div
        class="_description_af20a0"
      >
        Warning message
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert component > renders without title 1`] = `
<div>
  <div
    class="_alert_af20a0 _info_af20a0 "
    role="alert"
  >
    <div
      class="_icon_af20a0"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          clip-rule="evenodd"
          d="M11.5 21a8.5 8.5 0 1 1 0-17 8.5 8.5 0 0 1 0 17zM13 8.878c0-1.27-.499-1.896-1.496-1.878C10.501 7.03 10 7.68 10 8.95c0 .737.17 1.647.51 2.731l.318.98c.081.245.14.413.175.503.197.533.376.811.537.835.15.018.314-.248.493-.8.083-.257.161-.512.233-.763.071-.252.146-.503.224-.755.34-1.12.51-2.054.51-2.803zM11.5 18a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="_content_af20a0"
    >
      <div
        class="_description_af20a0"
      >
        Description only
      </div>
    </div>
  </div>
</div>
`;
